Refatorando o código para inglês
