# app/Swagger/Usuario/LogoutResponse.php
@@ -4,7 +4,7 @@ namespace App\Swagger\Usuario;
 
 /**
  * @OA\Get(
- *     path="/usuario/logout",
+ *     path="/user/logout",
  *     summary="Fazer logout do usuário",
  *     tags={"Autenticação"},
  *     security={{"bearerAuth": {}}},
@@ -12,8 +12,8 @@ namespace App\Swagger\Usuario;
  *         response=111,
  *         description="Logout bem-sucedido",
  *         @OA\JsonContent(
- *             @OA\Property(property="resposta", type="string", example="Usuário desconectado com sucesso."),
- *             @OA\Property(property="codigo_resposta", type="integer", example=111)
+ *             @OA\Property(property="response", type="string", example="Usuário desconectado com sucesso."),
+ *             @OA\Property(property="response_code", type="integer", example=111)
  *         )
  *     )
  * )
