# routes/api.php
@@ -3,9 +3,11 @@
 use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\Auth\AuthController;
 
-Route::controller(AuthController::class)->prefix('usuario')->group(function () {
+Route::controller(AuthController::class)->prefix('user')->group(function () {
     Route::post('login', 'login');
-    Route::post('registrar', 'registrar');
-    Route::get('detalhar', 'detalhar')->middleware('token');
-    Route::get('logout', 'logout')->middleware('token');
+    Route::post('register', 'register');
+    Route::middleware(['token'])->group(function () {
+        Route::get('show', 'show');
+        Route::get('logout', 'logout');
+    });
 });
